# yandex_dl_course_2

./: README.md  pyproject.toml  solution.ipynb
configs/: config.yaml
src/: __init__.py  config_utils.py  data_utils.py  eval_lstm.py  eval_transformer_pipeline.py  lstm_model.py  lstm_train.py  next_token_dataset.py  project_utils.py  summary.py  tokenizer_vocab.py
